[gd_scene load_steps=7 format=3 uid="uid://dx0p5aakyf7wj"]

[ext_resource type="Theme" uid="uid://8vx0b5t8hnln" path="res://Dark theme.tres" id="1_cws38"]
[ext_resource type="Script" uid="uid://dvogjhr62et1o" path="res://Scripts/Log List Window/context_menu.gd" id="2_8yyt4"]
[ext_resource type="PackedScene" uid="uid://yb2ommqnecg0" path="res://Scenes/Log List Window/cm_button.tscn" id="3_0xjuw"]
[ext_resource type="Texture2D" uid="uid://bsjkowxjt2cee" path="res://icons/open-in-app.svg" id="3_3143w"]
[ext_resource type="Texture2D" uid="uid://d35cuwvd62pvm" path="res://icons/open-in-new.svg" id="4_55tju"]
[ext_resource type="Texture2D" uid="uid://dtopsxgvj7gvn" path="res://icons/content-copy.svg" id="5_e3882"]

[node name="ContextMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 2
size_flags_vertical = 2
focus_mode = 2
theme = ExtResource("1_cws38")
script = ExtResource("2_8yyt4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37254903, 0.37254903, 0.37254903, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
size_flags_horizontal = 3

[node name="OpenLogButton" parent="VBoxContainer" instance=ExtResource("3_0xjuw")]
unique_name_in_owner = true
layout_mode = 2
text = "Open"
icon = ExtResource("3_3143w")

[node name="OpenWithButton" parent="VBoxContainer" instance=ExtResource("3_0xjuw")]
unique_name_in_owner = true
layout_mode = 2
text = "Open with..."
icon = ExtResource("4_55tju")

[node name="CopyFolderPathButton" parent="VBoxContainer" instance=ExtResource("3_0xjuw")]
unique_name_in_owner = true
layout_mode = 2
text = "Copy folder path"
icon = ExtResource("5_e3882")

[node name="CopyFilePathButton" parent="VBoxContainer" instance=ExtResource("3_0xjuw")]
unique_name_in_owner = true
layout_mode = 2
text = "Copy file path"
icon = ExtResource("5_e3882")

[node name="OpenWithDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.exe;Executables;application/vnd.microsoft.portable-executable")
use_native_dialog = true
